# F1-Race-Analysis-with-Python

./: README.md  pyproject.toml
f1_race_analysis_with_python/: config.py
f1_race_analysis_with_python/config/: constantes.py
f1_race_analysis_with_python/notebooks/: Teste.ipynb  f1_main_analysis.ipynb  f1_main_analysis_en_clean.ipynb  test_positions.ipynb
f1_race_analysis_with_python/script/: Drivers_Positions.py  Lap_Times_Consistency.py  Plot_Pit_strategies.py
f1_race_analysis_with_python/script/utils/: Import_Race_Id.py
