[tool.poetry]
name = "f1-race-analysis-with-python"
version = "0.1.0"
description = ""
authors = ["Gabryel Januario <gabryeelcomy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.1"
matplotlib = "^3.10.3"
numpy = "^2.3.1"
seaborn = "^0.13.2"
plotly = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
